2002-07-02  Darin Adler  <darin@apple.com>

	- fixed 2975790 - Ads on salon.com scribble all over page

        * Plugins.subproj/IFPluginView.mm:
        (-[IFPluginView setUpWindowAndPort]): New, sets up the window, but does not
	call NPP_SetWindow again.
        (-[IFPluginView setWindow]): Call [setUpWindowAndPort] then call NPP_SetWindow.
        (-[IFPluginView start]): Register for changes to the bounds or frame of any of
	our superviews, not just one particular one. Also, don't bother to register for
	notification when the window resizes. Finally, use the constants for the names
	of the notifications, not literal strings.
        (-[IFPluginView layout]): Just use [setUpWindowAndPort]; no need for a new call
	to NPP_SetWindow.
        (-[IFPluginView viewHasMoved:]): Just use [setUpWindowAndPort]; no need for a new
	call to NPP_SetWindow.

2002-07-01  Maciej Stachowiak  <mjs@apple.com>

        * WebView.subproj/IFWebView.mm:
        (-[IFWebView window]): If the view hasn't been added to a window
	yet, get the window from the WindowContext.

2002-07-01  Richard Williamson  <rjw@apple.com>

        * WebView.subproj/IFMainURLHandleClient.mm:
        (-[IFMainURLHandleClient IFURLHandleResourceDidFinishLoading:data:]):
        Ensure that _didStopLoading is called for both error case and
        non-error case.

2002-07-01  Richard Williamson  <rjw@apple.com>

        * WebView.subproj/IFMainURLHandleClient.mm:
        (-[IFMainURLHandleClient IFURLHandleResourceDidFinishLoading:data:]):
        A completion message was being sent, as well as an error message.
        This, no doubt confused Alexander.  No only send either the final
        error message or the completion message.

2002-07-01  Darin Adler  <darin@apple.com>

	Ken fixed the load message sequencing problem in WebFoundation, so now we can
	go back to the original versions of the asserts.

        * WebCoreSupport.subproj/IFResourceURLHandleClient.m: